adds column's docks
